# plannxt_Spring2023

./: .gitignore  Gemfile  README.md  add_steps.patch  zero_to_deployed.md
3d/: CMakeLists.txt  README.md  room.cpp
3d/src/: chair.cpp  chair.h  cupboard.cpp  cupboard.h  fan.cpp  fan.h  glad.c  shelf.cpp  shelf.h  snowman.cpp  snowman.h  table.cpp  table.h  window.cpp  window.h
app/controllers/: event_steps_controller.rb  password_resets_controller.rb  plan_models_controller.rb  preview_controller.rb  registrations_controller.rb  sessions_controller.rb
app/helpers/: application_helper.rb  plan_model_helper.rb
app/javascript/: application.js  drawPanel.js
app/mailers/: welcome_mailer.rb
app/models/: event_step.rb  eventstep.rb  plan_model.rb  user.rb
config/: application.rb  routes.rb
config/environments/: development.rb  production.rb
coverage/: .last_run.json  .resultset.json  index.html
db/: schema.rb
db/migrate/: 20230221091511_create_eventsteps.rb  20230225022032_create_event_steps.rb  20230228233445_change_evensteps_field.rb  20230304092117_change_data_type_for_event_steps.rb  20230405014828_add_permissions.rb
documentation/Spring2023/: PLANXT_Final_Presentation.pptx  i0.tar  i1.tar  i2.tar  i3.tar  i5.tar
features/: addstep.feature  addsteps.feature  canvas_navigation.feature  editcanvas.feature  password.feature  signin.feature  signup.feature  workflow.feature
features/step_definitions/: step.rb
frontend/: drawPanel.html
public/: addeventsteps.js  newplan.css  nicepage.css
spec/request/: event_steps_controller_spec.rb  (+5 more)
(+35 files in other folders)
